# business-brochure

./: README.md  company-brochure.ipynb  package-lock.json  pyproject.toml
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  scraper.py
business-brochure-app/: README.md  package-lock.json
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BrochureDisplay.tsx  BrochureForm.tsx
