[project]
name = "business-brochure"
version = "0.1.0"
description = "AI-powered tool that generates company brochures by scraping and analyzing website content"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
